--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ flask-sqlalchemy = "^3.1.1"
 python-dotenv = "^1.0.1"
 waitress = "^3.0.0"
 flask-migrate = "^4.0.7"
+wtforms = "^3.1.2"
+flask-wtf = "^1.2.1"
+phonenumbers = "^8.13.38"
 
 
 [build-system]
