--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flask-migrate = "^4.0.7"
 wtforms = "^3.1.2"
 flask-wtf = "^1.2.1"
 phonenumbers = "^8.13.38"
+captcha = "^0.5.0"
 
 
 [build-system]
