--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alembic==1.13.1 ; python_version >= "3.12" and python_version < "4.0"
+alembic==1.13.2 ; python_version >= "3.12" and python_version < "4.0"
 blinker==1.8.2 ; python_version >= "3.12" and python_version < "4.0"
 brotli==1.1.0 ; platform_python_implementation == "CPython" and python_version >= "3.12" and python_version < "4.0"
 brotlicffi==1.1.0.0 ; platform_python_implementation != "CPython" and python_version >= "3.12" and python_version < "4.0"
@@ -14,7 +14,7 @@ flask-weasyprint==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 flask-wtf==1.2.1 ; python_version >= "3.12" and python_version < "4.0"
 flask==3.0.3 ; python_version >= "3.12" and python_version < "4.0"
 fonttools[woff]==4.53.1 ; python_version >= "3.12" and python_version < "4.0"
-greenlet==3.0.3 ; python_version >= "3.12" and python_version < "4.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+greenlet==3.0.3 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
 gunicorn==23.0.0 ; python_version >= "3.12" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.12" and python_version < "4.0"
 itsdangerous==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -23,19 +23,19 @@ mako==1.3.5 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 pdfkit==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
-phonenumbers==8.13.38 ; python_version >= "3.12" and python_version < "4.0"
-pillow==10.3.0 ; python_version >= "3.12" and python_version < "4.0"
+phonenumbers==8.13.44 ; python_version >= "3.12" and python_version < "4.0"
+pillow==10.4.0 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0"
 pydyf==0.11.0 ; python_version >= "3.12" and python_version < "4.0"
 pyphen==0.16.0 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
-sqlalchemy==2.0.30 ; python_version >= "3.12" and python_version < "4.0"
+sqlalchemy==2.0.32 ; python_version >= "3.12" and python_version < "4.0"
 tinycss2==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
-typing-extensions==4.12.0 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 waitress==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 weasyprint==62.3 ; python_version >= "3.12" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.12" and python_version < "4.0"
-werkzeug==3.0.3 ; python_version >= "3.12" and python_version < "4.0"
+werkzeug==3.0.4 ; python_version >= "3.12" and python_version < "4.0"
 wtforms==3.1.2 ; python_version >= "3.12" and python_version < "4.0"
 zopfli==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
