optimize docker and docker compose

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ flask-htmx = "^0.3.2"
 pdfkit = "^1.0.0"
 flask-weasyprint = "^1.1.0"
 click = "^8.1.7"
-gunicorn = "^23.0.0"
+gunicorn = {extras = ["gevent"], version = "^23.0.0"}
+gevent = "^24.2.1"
 
 
 [build-system]
