--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ flask-weasyprint==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 flask-wtf==1.2.1 ; python_version >= "3.12" and python_version < "4.0"
 flask==3.0.3 ; python_version >= "3.12" and python_version < "4.0"
 fonttools[woff]==4.53.1 ; python_version >= "3.12" and python_version < "4.0"
-greenlet==3.0.3 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
-gunicorn==23.0.0 ; python_version >= "3.12" and python_version < "4.0"
+gevent==24.2.1 ; python_version >= "3.12" and python_version < "4.0"
+greenlet==3.0.3 ; platform_python_implementation == "CPython" and python_version >= "3.12" and python_version < "4.0" or python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
+gunicorn[gevent]==23.0.0 ; python_version >= "3.12" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.12" and python_version < "4.0"
 itsdangerous==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -29,6 +30,7 @@ pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0"
 pydyf==0.11.0 ; python_version >= "3.12" and python_version < "4.0"
 pyphen==0.16.0 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==74.0.0 ; python_version >= "3.12" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlalchemy==2.0.32 ; python_version >= "3.12" and python_version < "4.0"
 tinycss2==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -38,4 +40,6 @@ weasyprint==62.3 ; python_version >= "3.12" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.12" and python_version < "4.0"
 werkzeug==3.0.4 ; python_version >= "3.12" and python_version < "4.0"
 wtforms==3.1.2 ; python_version >= "3.12" and python_version < "4.0"
+zope-event==5.0 ; python_version >= "3.12" and python_version < "4.0"
+zope-interface==7.0.3 ; python_version >= "3.12" and python_version < "4.0"
 zopfli==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
