--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cffi==1.17.0 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Windows"
 cssselect2==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
+et-xmlfile==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 flask-htmx==0.3.2 ; python_version >= "3.12" and python_version < "4.0"
 flask-migrate==4.0.7 ; python_version >= "3.12" and python_version < "4.0"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -22,6 +23,7 @@ itsdangerous==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
 mako==1.3.5 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
+openpyxl==3.1.5 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 pdfkit==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 phonenumbers==8.13.44 ; python_version >= "3.12" and python_version < "4.0"
